# splice

./: README.md  package.json
example/: splice.html
experiments/wasm/: build.sh  splice.core.js  test.html
experiments/wasm/splice_core/: Cargo.toml
experiments/wasm/splice_core/src/: context.rs  dispatcher.rs  frame.rs  lib.rs  runtime.rs
experiments/wasm/splice_core/src/plugins/: echo.rs
wasm/: test.html
wasm/splice_core/: Cargo.toml
wasm/splice_core/src/: context.rs  frame.rs  lib.rs  runtime.rs
wasm/splice_core/src/plugins/: echo.rs
whitepapers/: splice-framework-design.md
