[package]
name = "splice_core"
repository = "https://github.com/lucianofedericopereira/splice"
license="MIT"
description=" Splice: Modular, high-performance signal dispatch framework."
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"

[lib]
crate-type = ["cdylib", "rlib"]


[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
